# RAG_Workshop

./: README.md  main.py  pyproject.toml  word_embedding.ipynb
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: word_embedding-checkpoint.ipynb
chroma_db/: chroma.sqlite3
models/: word2vec_model
